--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -17,13 +17,28 @@
 </head>
 <body>
 
-  Improve your front-end skills by building projects
+<main>
+  <div class="rectangle">
+  <div class="qr-code">
 
-  Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+    <img src="images/image-qr-code.png" alt="QR Code">
+
+  </div>
+
+  <div class="title">
+    Improve your front-end skills by building projects
+  </div>
   
+  
+<div class="text">
+    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
+</div>
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Ygor</a>.
   </div>
+</div>
+</main>
 </body>
 </html>
