--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,29 +16,16 @@
   </style>
 </head>
 <body>
+  <main>
+    <img src="images/image-qr-code.png" alt="">
+    <h1>Improve your front-end skills by building projects</h1>
+    <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
 
-<main>
-  <div class="rectangle">
-  <div class="qr-code">
-
-    <img src="images/image-qr-code.png" alt="QR Code">
-
-  </div>
-
-  <div class="title">
-    Improve your front-end skills by building projects
-  </div>
   
-  
-<div class="text">
-    Scan the QR code to visit Frontend Mentor and take your coding skills to the next level
-</div>
-
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Ygor</a>.
   </div>
-</div>
-</main>
 </body>
 </html>
