--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -16,6 +16,7 @@
   </style>
 </head>
 <body>
+  <div class="card">
   <main class="container">
     <img src="images/image-qr-code.png" alt="">
     <h1>Improve your front-end skills by building projects</h1>
@@ -27,5 +28,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Ygor</a>.
   </div>
+</div>
 </body>
 </html>
